# rocketlanding

./: .gitignore  pyproject.toml
src/LSTM/: eval.py  memory.py  model.py  train.py
src/LSTMopt/: eval.py  model.py  train.py
src/rocketlanding/: models.py  train.py  watch.py
src/rocketlanding_multiframe/: eval.py  memory.py  models.py  train.py
