[project]
name = "rocketlanding"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon Kaeser",email = "84085527+st167849@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "gymnasium[box2d,mujoco] (>=1.2.3,<2.0.0)",
    "psutil (>=7.2.1,<8.0.0)"
]

[tool.poetry]
packages = [{include = "rocketlanding", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
